<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#00000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mygdx.game.resist">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tolerance"
        android:entries="@array/Tolerance"
        android:spinnerMode="dialog"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="26dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:background="#dadada" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tc"
        android:entries="@array/TC"
        android:spinnerMode="dialog"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="26dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:background="#dadada" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resist"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:textSize="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resistValue"
        android:text="@string/Default_resistance"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="number"
        android:background="#dadada" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tolerance"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_above="@+id/tolerance"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TC"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:layout_above="@+id/tc"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3D"
        android:id="@+id/btn3D"
        android:textSize="24dp"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/resistValue"
        android:layout_alignEnd="@+id/resistValue" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CBT"
        android:entries="@array/CBT"
        android:layout_above="@+id/btn3D"
        android:layout_marginBottom="60dp"
        android:layout_alignRight="@+id/tc"
        android:layout_alignEnd="@+id/tc"
        android:layout_alignLeft="@+id/tc"
        android:layout_alignStart="@+id/tc"
        android:spinnerMode="dialog"
        android:background="#dadada" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color Band Type"
        android:id="@+id/textView4"
        android:textSize="20dp"
        android:layout_above="@+id/CBT"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BACK"
        android:id="@+id/butBack"
        android:textSize="24dp"
        android:layout_alignTop="@+id/btn3D"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btn3D"
        android:layout_toLeftOf="@+id/btn3D" />

</RelativeLayout>
